kubernetes/apps/api-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-gateway
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
