kubernetes/apps/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: mysticshirou/icantkube:api-gateway-v1.3
          ports:
            - containerPort: 80
          volumeMounts:
            - name: api-gateway-config
              mountPath: /config
              readOnly: true
      volumes:
        - name: api-gateway-config
          configMap:
            name: api-gateway-config
